# parallel_playground

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  develop.sh  pyproject.toml  run_cmake.sh  setup.py  torch_setup.py
csrc/: python_api.cpp  tk_bindings.cu  tk_bindings.h  torch_api.cpp
csrc/all2all/: a2a_context.hpp  a2a_context_tk.hpp  a2a_worker.hpp  a2a_worker_tk.hpp  all2all.hpp  all2all_base.hpp  all2all_tk.hpp  utils.h
csrc/apis/: moe.hpp  moe_forward.cpp  moe_forward.hpp
csrc/jit/: cache.hpp  compiler.hpp  runtime.hpp
csrc/jit/utils/: common.hpp  culib.hpp  files.hpp  lazy_init.hpp  math.hpp
csrc/jit_kernels/: fp8_tk_globals_factory.cu  tk_globals_factory.h
csrc/jit_kernels/heuristics/: common.hpp  heuristics.hpp  sm90_arch.hpp
csrc/jit_kernels/impls/: kernel2.hpp  kernel3.hpp  kernel4.hpp  kernel5.hpp  kernel5_1.hpp  kernel5_2.hpp  sm90_bf16_gemm.hpp  sm90_fp8_gemm_1d2d.hpp  sm90_layout.hpp
csrc/kernels/: cast.cuh  internal_api.hpp
csrc/kernels/all2all/: a2a_combine_recv.cuh  a2a_combine_recv_tk.cuh  a2a_combine_send.cuh  a2a_combine_send_tk.cuh  a2a_dispatch_recv.cuh  a2a_dispatch_recv_tk.cuh  a2a_dispatch_send.cuh  a2a_dispatch_send_tk.cuh  a2a_kernels.h
csrc/runtime/: cublas_common.h  cumem.h  device.hpp  dtype_torch.h  format.hpp  kernels_api.h  parallel.h  tensor.h  tensor_compat.h  utils.h
moe_cuda/include/: kittens.cuh  prototype.cuh
moe_cuda/include/moe_cuda/: cuda_common.h  dtype.h  error.hpp  types.h
moe_cuda/include/moe_cuda/kernels/: fp8_lcf.cuh  kernel2.cuh  kernel3.cuh  kernel3_sub.cuh  kernel4.cuh  kernel5.cuh  kernel5_1.cuh  kernel5_2.cuh  sm90_bf16_gemm.cuh  sm90_fp8_gemm_1d2d.cuh  sm90_fp8_gemm_1d2d_tk.cuh
moe_cuda/include/moe_cuda/kernels/common/: common.cuh  common.hpp  launch_utils.cuh  scheduler.cuh  sm90_utils.cuh
moe_cuda_python/: __init__.py  ops.py
python/: benchmark_fffn.py  benchmark_fused_moe.py  benchmark_mlp.py  benchmark_moe.py  common.py  deepspeed_comp.py
src/: moe_ops.cu
test/test_cpp/: benchmark_moe.cpp  test_all2all.cpp  test_bf16_gemm.cpp  test_fp8.cpp  test_kernel2.cpp  test_kernel3.cpp  test_tma_reduce.cu  test_utils.h
